# a_share_research

./: .coverage  .gitignore  README.md  pyproject.toml
data/raw/: 000001_202401_daily.csv  000001_202401_daily.parquet
notebooks/: 01_market_data_smoke.ipynb
scripts/: smoke_test.py  start_dashboard.sh  start_local_postgres.sh  stop_dashboard.sh  stop_local_postgres.sh
src/a_share_research/: __init__.py  data.py  db.py  index_data.py  stock_data.py  sync_index_data.py  sync_stock_data.py  webapp.py
src/a_share_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/a_share_research/domain/: __init__.py  market.py
src/a_share_research/repositories/: __init__.py  indexes.py  overview.py  stocks.py
src/a_share_research/services/: __init__.py  market_catalog.py  market_views.py  research.py
src/a_share_research/static/: app.css  app.js
src/a_share_research/static/css/: app.css
src/a_share_research/static/js/: app.js
src/a_share_research/templates/: base.html  index.html  instrument.html
src/a_share_research/templates/components/: pagination.html
src/a_share_research/templates/pages/: asset_detail.html  index_list.html  market_home.html  stock_list.html
src/a_share_research/templates/partials/: asset_detail_panel.html  index_content.html  index_list_panel.html  instrument_panel.html  market_home_content.html  stock_list_panel.html
src/a_share_research/web/: app.py  templating.py
src/a_share_research/web/routes/: __init__.py  (+2 more)
tests/: test_data_adapters.py  test_db_module.py  test_market_dashboard.py  test_sync_stock_data.py
